# dummy-language

./: .gitignore  CMakeLists.txt  README.md
dummy-language/: CMakeLists.txt  buildin.cpp  buildin.h  checkers.cpp  checkers.h  dummy-language.cpp  enum_utility.cpp  enum_utility.h  expressions.cpp  expressions.h  lexer.h  object.h  scope.h  statements.cpp  statements.h  token.h
